--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -123,20 +123,22 @@
         <%= render 'messages/form' %>
       </div>
       <!-- Promos -->
-      <div class="promo-container">
-        <h2 class="title-gray-background"><%=  @promo ? @promo.title.upcase : 'No title' %></h2>
-        <div class="promo-card-image">
-          <% if @promo.present? && @promo.display_description %>
-            <h3><%= @promo.title %></h3>
-            <p><%= @promo.description %></p>
-          <% end %>
-          <%= (cl_image_tag @promo.media) if @promo.present?%>
-          <div class="promo-card-hover">
-            <strong>Agrandir l'image</strong>
-            <i class="fa fa-arrows-alt" id="expand-cross"></i>
+      <% if @promo %>
+        <div class="promo-container">
+          <h2 class="title-gray-background"><%= @promo.title.upcase %></h2>
+          <div class="promo-card-image">
+            <% if @promo.present? && @promo.display_description %>
+              <h3><%= @promo.title %></h3>
+              <p><%= @promo.description %></p>
+            <% end %>
+            <%= (cl_image_tag @promo.media) if @promo.present?%>
+            <div class="promo-card-hover">
+              <strong>Agrandir l'image</strong>
+              <i class="fa fa-arrows-alt" id="expand-cross"></i>
+            </div>
           </div>
         </div>
-      </div>
+      <% end %>
     </div>
   </div>
   <div class="full-screen-promo">
