--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -123,7 +123,7 @@
         <%= render 'messages/form' %>
       </div>
       <!-- Promos -->
-      <% if @promo %>
+      <% if @promo.present? %>
         <div class="promo-container">
           <h2 class="title-gray-background"><%= @promo.title.upcase %></h2>
           <div class="promo-card-image">
