change addresse and logo

--- a/app/assets/stylesheets/pages/_contact.scss
+++ b/app/assets/stylesheets/pages/_contact.scss
@@ -16,3 +16,12 @@
   width: 100%;
   margin-top: 50px;
 }
+
+.address-box {
+  background-color: $light-gray;
+  padding: 10px;
+  margin-bottom: 10px;
+  p {
+    margin: 0;
+  }
+}
