--- a/app/views/shared/_categories.html.erb
+++ b/app/views/shared/_categories.html.erb
@@ -2,7 +2,7 @@
 <div class="container catgories-container">
   <div class="tags-catgories-container">
     <% @categories.each do |category| %>
-      <%= link_to category_products_path(category.name), class: ((@category == category || @product && @product.category == category) ? 'category-tag tag-actif' : 'category-tag') do %>
+      <%= link_to category_products_path(category.slug), class: ((@category == category || @product && @product.category == category) ? 'category-tag tag-actif' : 'category-tag') do %>
         <%= category.name.upcase %>
       <% end %>
     <% end %>
@@ -11,7 +11,7 @@
   <div class="tags-catgories-container-small-screen">
     <ul>
       <% @categories.each do |category| %>
-        <li class="category-tag-small-screen"><%= link_to category_products_path(category.name) do %>
+        <li class="category-tag-small-screen"><%= link_to category_products_path(category.slug) do %>
         <%= category.name.upcase %>
       <% end %></li>
       <% end %>
