--- a/app/views/pages/vente.html.erb
+++ b/app/views/pages/vente.html.erb
@@ -1,4 +1,7 @@
 <div class="container container-vente white-box">
+  <h1>Achetez LOXAM partout en Corse</h1>
+  <br>
+  <br>
   <div class="row">
     <div class="col-xs-12 col-sm-6">
 
