--- a/app/views/pages/location.html.erb
+++ b/app/views/pages/location.html.erb
@@ -1,4 +1,6 @@
 <div class="container container-location white-box">
+  <h1>Louez LOXAM partout en Corse</h1>
+  <br>
   <p>La location permet de bénéficier d&#39;outils professionnels modernes, sûrs et entretenus, et de gagner en flexibilité, le tout à un coût abordable pour une maîtrise parfaite du budget de vos chantiers. LOXAM est le numéro 1 de la location en Europe, cette enseigne vous permet de bénéficier de l’expérience d’un réseau dont la location est l’activité principale depuis plus de 40ans.</p>
 
   <h4>Les services</h4>
