--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -17,8 +17,8 @@
       </div>
       <a href="tel:+33495602364"><i class="fa fa-phone"></i> 04 95 60 23 64</a>
       <p>FAX: 04 95 60 21 89</p>
-      <a href="mailto:contact@loxambastia.com"><i class="fa fa-envelope"></i> contact@loxambastia.com</a>
-      <p><strong>Ouvert du lundi au vendredi <br>De 7h00 à 12h00 et de 14h00 à 18h00</strong></p>
+      <a href="mailto:contact@loxamcorse.com"><i class="fa fa-envelope"></i> contact@loxamcorse.com</a>
+      <p><strong>Nos agences sont ouvertes du Lundi au Vendredi <br>De 7h00 à 12h00 et de 14h00 à 18h00</strong></p>
     </div>
     <div class="col-xs-12">
       <iframe 
