--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="socials">
   <h2>RESTONS CONNECTÉS</h2>
-  <a href="https://www.facebook.com/LoxamBastia/" target="_blank"><i class="fa fa-facebook-square"></i></a>
-  <a href="https://www.instagram.com/loxam_bastia/" target="_blank"><i class="fa fa-instagram"></i></a>
+  <a href="https://www.facebook.com/LoxamCorse/" target="_blank"><i class="fa fa-facebook-square"></i></a>
+  <a href="https://www.instagram.com/loxam_corse/" target="_blank"><i class="fa fa-instagram"></i></a>
 </div>
 <div class="footer">
   <div class="row">
