--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,6 +7,8 @@
     <% end %>
   </div>
 
+  <%= image_tag 'bastia', class: "secondary-logo" %>
+
   <!-- Search bar centered -->
   <div class="group search hidden-xs hidden-sm">
     <input type="text" required="" id="search-bar">
@@ -21,6 +23,8 @@
       <% end %>
     </ul>
   </div>
+
+  <%= image_tag 'ajaccio', class: "secondary-logo" %>
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
