--- a/app/views/dashboard/_dashboard_messages.html.erb
+++ b/app/views/dashboard/_dashboard_messages.html.erb
@@ -25,6 +25,7 @@
           <div class="message-display-part">
             <span><%= message.created_at.strftime('%d/%m/%Y - %H:%M:%S') %></span>
             <span><%= message.name %></span>
+            <span><%= message.agency || "N/A" %></span>
 
           <div class="message-actions">
             <div class="message-state-action" data-message-id="<%= message.id %>">
