--- a/app/views/affiliates/show.html.erb
+++ b/app/views/affiliates/show.html.erb
@@ -18,7 +18,7 @@
       <div class="col-xs-12 col-sm-4">
         <div>
           <p><%= @affiliate.tagline.capitalize %></p>
-          <p>Loxam Bastia toujours présent pour répondre à vos questions!</p>
+          <p>Loxam Corse toujours présent pour répondre à vos questions!</p>
           <%= link_to "Demande d'informations", contact_path, class: 'loxam-btn' %>
         </div>
       </div>
