--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -30,7 +30,7 @@
     <div class="col-xs-12">
       <iframe 
         id="map" 
-        src="https://maps.google.com/maps?q=ROUTE%20DE%20MEZZAVIA%2020090%20AJACCIO&t=&z=13&ie=UTF8&iwloc=&output=embed"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1483.6913443161136!2d8.764541683612755!3d41.9491145480002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12da6bac505b80ed%3A0x68688edb1300faa1!2sLoxam%20Ajaccio!5e0!3m2!1sen!2sca!4v1580514870002!5m2!1sen!2sca"
         width="600" height="450" frameborder="0" style="border:0" allowfullscreen>
       </iframe>
     </div>
