--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -95,15 +95,19 @@
         <div class="row">
           <div class="col-xs-12 col-sm-6">
             <%= f.input :name, label: 'Nom/Société' %>
-            <span class="error" id="name-errro"></span>
+            <span class="error" id="name-error"></span>
           </div>
           <div class="col-xs-12 col-sm-6">
             <%= f.input :email %>
-            <span class="error" id="email-errro"></span>
+            <span class="error" id="email-error"></span>
+            </div>
+          <div class="col-xs-12">
+            <%= f.input :agency, :label => 'Choisissez une agence', :collection => ['LOXAM AJACCIO', 'LOXAM BASTIA'], include_blank: true %>
+            <span class="error" id="agency-error"></span>
           </div>
         </div>
         <%= f.input :content, label: 'Message' %>
-        <span class="error" id="content-errro"></span>
+        <span class="error" id="content-error"></span>
         <%= f.button :submit, value: 'Demande informations', class: 'loxam-btn btn-send' %>
       <% end %>
       </div>
